# OpenGL_4_4_SFML

./: .gitignore  OpenGL_4_4.sln  README.md  compilelog.txt  meson.build  ogl  ogl.c
src/: Camera.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGL_4_4.vcxproj  OpenGL_4_4.vcxproj.filters  Shader.cpp  Shader.h  Texture.cpp  Texture.h  fong.fragment.glsl  fong.vertex.glsl  fragment.glsl  guro.fragment.glsl  guro.vertex.glsl  meson.build  ogl_main.cpp  stb_image.h  vertex.glsl
